active-deployments/docker-reg/registry.yaml

# USE THIS FOR INSECURE AUTHENTICATION 
# kubectl create secret docker-registry registry-secret \                                                                                                           --docker-server=http://docker-registry.docker-registry.svc.cluster.local:5000 \
#   --docker-username=anyvalue \
#   --docker-password=anyvalue 


# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: docker-registry

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
      - name: registry
        image: registry:2
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: registry-storage
          mountPath: /var/lib/registry
      volumes:
      - name: registry-storage
        persistentVolumeClaim:
          claimName: docker-registry-pvc

---
# Service to Expose Docker Registry
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: docker-registry
spec:
  selector:
    app: docker-registry
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: NodePort
